# Django_search_template

./: .gitignore  issue.md  questions.md  readme.md  requirements.md  startup.md
cpp_microservice/: CMakeLists.txt  TextHandler.cpp  TextHandler.h  main.cpp
search/: db.sqlite3
search/main/: admin.py  forms.py  models.py  search_engine.py  tasks.py  utils.py  views.py
search/main/migrations/: 0001_initial.py  0002_document_documentterm_term_delete_uploadedfile_and_more.py  0003_termrelation_and_more.py
search/main/templates/main/: index.html
search/search/: celery.py  settings.py  urls.py
tests/: Example Boolean Queries for Testing.txt
tests/files/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
